@@ -23,11 +23,12 @@ public class WaterTempModifier extends TempModifier
     public double getValue(Temperature temp, PlayerEntity player)
     {
         double strength = (double) getArgument("strength");
-        setArgument("strength", MathHelperCS.clamp(strength + (player.isInWater() ? 0.15 : -0.02), 0, 10));
+        setArgument("strength", MathHelperCS.clamp(strength + (player.isInWater() ? 0.15 : -0.005 - Math.max(0, temp.get() / 20)), 0, 10));
+        //System.out.println(Math.max(0, temp.get() / 10));
 
         if (!player.isInWater() && strength > 0)
         {
-            if (Math.random() < strength / 15)
+            if (Math.random() < strength / 40)
             {
                 double randX = player.getWidth() * (Math.random() - 0.5);
                 double randY = player.getHeight() * Math.random();
@@ -37,7 +38,7 @@ public class WaterTempModifier extends TempModifier
         }
 
         //System.out.println(Math.min(0, temp.get() - ConfigCache.getInstance().minTemp) / 2d);
-        return temp.get() + MathHelperCS.convertUnits(-strength, Units.F, Units.MC, false) + Math.min(0, temp.get() - ConfigCache.getInstance().minTemp) * (strength / 20);
+        return temp.get() + MathHelperCS.convertUnits(-strength, Units.F, Units.MC, false) + Math.min(0, temp.get() - ConfigCache.getInstance().minTemp) * (strength / 40);
     }
 
     @Override
